--- a/styles/style.css
+++ b/styles/style.css
@@ -1,31 +1,352 @@
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
-}
+}  
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
+  display: flex;
+  align-items: center;
+  position: relative;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.header__logo {
+  position: absolute;
+  left: 64px;
+  top: 30px;
+  width: 228px;
+  height: 32px;
+  z-index: 2;
+}
+
+.header__title {
+  margin-left: 64px;
+  width: 730px;
+  z-index: 2;
+  color: #000;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: 600;
+}
+
+.header__subtitle {
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  width: 388px;
+  z-index: 2;
+  color: #000;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.header__link {
+text-decoration: none;
+}
+
+.header__main-illustration {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 765px;
+  height: 608px;
+  z-index: 1;
+}
+
 .header__square-pic {
-  height: 568px;
+  position: absolute;
+  background-color: #2f80ed;
+  z-index: 0;
+  top: 64px;
+  right: 0;
   width: 568px;
+  height: 568px;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.two-columns {
+display: flex;
+margin: 100px auto;
+}
+
+.two-columns__brief {
+color: #2f80ed;
+margin: 30px auto;
+width: 175px;
+line-height: 1.2;
+font-size: 18px;
+font-weight: normal;
+}
+
+.two-columns__main-text {
+display: flex;
+margin: auto;
+flex-wrap: wrap;
+justify-content: space-between;
+width: 80%;
+min-width: 784px;
+min-height: 34px;
+}
+
+.two-columns__paragraf {
+margin: 30px auto;
+width: 80%;
+color: #000;
+line-height: 34px;
+font-size: 24px;
+font-weight: normal;
+}
+
+.two-columns__span-accent {
+color: #000;
+line-height: 34px;
+font-size: 24px;
+font-weight: 600;
+}
+
+.digits {
+text-align: center;
+color: #000;
+}
+
+.section-title {
+margin: 100px auto 0;
+width: 60%;
+line-height: 1.15;
+font-size: 60px;
+font-weight: 600;
+}
+
+.section-subtitle {
+margin: 20px auto 0;
+width: 60%;
+line-height: 34px;
+font-size: 24px;
+font-weight: normal;
+}
+
+.table {
+display: flex;
+justify-content: space-between;
+flex-wrap: wrap;
+margin: 0 auto 100px;
+padding: 0;
+width: 1100px;
+}
+
+.table__cell {
+list-style: none;
+width: 250px;
+margin-top: 60px;
+}
+
+.table__heading {
+text-align: left;
+margin: 0 auto 20px;
+line-height: 1.15;
+font-size: 24px;
+font-weight: 600;
+}
+
+.table__text {
+margin: 0 auto 20px;
+text-align: left;
+line-height: 1.2;
+font-size: 18px;
+font-weight: normal;
+}
+
+.table__text_bank {
+margin: 0;
+text-align: left;
+line-height: 1.2;
+font-size: 18px;
+font-weight: normal;
+}
+
+.feynman {
+min-height: 890px;
+background-color: #f2f2f2;
+background-image: url(file:///Users/olgadavlud/Desktop/Praktikum/sprint-1__startkit/images/feynman.png);
+background-repeat: no-repeat;
+background-position: bottom left;
+position: relative;
+}
+
+.feynman__title {
+margin: 100px auto 70px;
+width: 648px;
+text-align: center;
+line-height: 1.15;
+font-size: 120px;
+font-weight: 600;
+}
+
+.feynman__subtitle {
+display: block;
+text-align: center;
+line-height: 51px;
+font-size: 36px;
+font-weight: normal;
+}
+
+.link {
+position: absolute;
+top: 50%;
+right: 0;
+margin-right: 48px;
+color: #2f80ed;
+line-height: 51px;
+font-size: 36px;
+font-weight: normal;
+text-decoration: none;
+}
+
+.kaufman {
+overflow: hidden;
+position: relative;
+text-align: center;
+background-color: #1f1f1f;
+color: #fff;
+z-index: -2; 
+}
+
+.section-title_theme_dark {
+margin: 90px auto 0;
+width: 60%;
+line-height: 1.15;
+font-size: 60px;
+font-weight: 600;
+}
+
+.section-subtitle_theme_dark {
+margin: 20px auto 0;
+width: 60%;
+line-height: 34px;
+font-size: 24px;
+font-weight: normal;
+}
+
+.table_theme_dark{
+display: flex;
+justify-content: space-between;
+flex-wrap: wrap;
+margin: 0 auto 90px;
+padding: 0;
+width: 1100px;
+}
+
 .table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
+list-style: none;
+width: 200px;
+margin-right: 0;
+margin-top: 80px;
+}
+
+.table__heading_theme_dark {
+text-align: left;
+margin: 0 auto 20px;
+line-height: 1.15;
+font-size: 24px;
+font-weight: 600;
+}
+
+.table__text_theme_dark {
+margin: 0;
+text-align: left;
+line-height: 1.2;
+font-size: 17px;
+font-weight: normal;
+}
+
+.kaufman__triangle {
+width: 877px;
+height: 877px;
+position: absolute;
+top: 0;
+right: -210px;
+z-index: -1;
+}
+
+.footer {
+min-height: 350px;
+background-color: #1f1f1f;
+color: #fff;
+padding: 60px 0 40px;
+}
+
+.footer__columns {
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+width: 90%;
+margin: 0 auto;
+padding: 0;
+}
+
+.footer__column_content_copyright {
+position: relative;
+flex-basis: 711px;
+}
+
+.logo_place_footer {
+width: 228px;
+height: 32px;
+}
+
+.footer__author {
+position: absolute;
+bottom: 0;
+margin: 18px 0;
+line-height: 25px;
+font-size: 18px;
+font-weight: normal;
+}
+
+.footer__column_content_info {
+list-style: none;
+display: block;
+}
+
+.footer__column-heading {
+line-height: 30px;
+font-size: 18px;
+font-weight: 600;
+margin-top: 0;
+margin-bottom: 0;
+}
+
+.footer__column-links {
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+list-style-type: none;
+margin: 0;
+padding: 20px 0 16px 0;
+}
+
+.footer__column_content_social {
+list-style: none;
+display: block;
+}
+
+.footer__social-icon {
+width: 16px;
+height: 16px;
+margin: 0;
+padding: 0 10px 0 0;
+}
+
+.footer__column-link {
+text-decoration: none;
+color: #fff;
+line-height: 30px;
+font-size: 18px;
+font-weight: normal;
+padding: 0;
 }
