--- a/styles/style.css
+++ b/styles/style.css
@@ -172,7 +172,7 @@ font-weight: normal;
 .feynman {
 min-height: 890px;
 background-color: #f2f2f2;
-background-image: url(file:///Users/olgadavlud/Desktop/Praktikum/sprint-1__startkit/images/feynman.png);
+background-image: url(../images/feynman.png);
 background-repeat: no-repeat;
 background-position: bottom left;
 position: relative;
