--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@
   position: relative;
 }
 
-.header__logo {
+.logo_place_header {
   position: absolute;
   left: 64px;
   top: 30px;
@@ -25,7 +25,7 @@
 }
 
 .header__title {
-  margin-left: 64px;
+  margin:0 0 0 64px;
   width: 730px;
   z-index: 2;
   color: #000;
@@ -39,6 +39,8 @@
   left: 64px;
   bottom: 30px;
   width: 388px;
+  margin-top: 0;
+  margin-bottom: 0;
   z-index: 2;
   color: #000;
   line-height: 25px;
@@ -48,6 +50,7 @@
 
 .header__link {
 text-decoration: none;
+color: #2f80ed;
 }
 
 .header__main-illustration {
@@ -71,12 +74,14 @@ text-decoration: none;
 
 .two-columns {
 display: flex;
+width: 80%;
+align-content: space-between;
 margin: 100px auto;
 }
 
 .two-columns__brief {
 color: #2f80ed;
-margin: 30px auto;
+margin: 0;
 width: 175px;
 line-height: 1.2;
 font-size: 18px;
@@ -85,21 +90,26 @@ font-weight: normal;
 
 .two-columns__main-text {
 display: flex;
-margin: auto;
 flex-wrap: wrap;
 justify-content: space-between;
 width: 80%;
 min-width: 784px;
-min-height: 34px;
 }
 
 .two-columns__paragraf {
-margin: 30px auto;
-width: 80%;
+margin: 30px 0;
 color: #000;
 line-height: 34px;
 font-size: 24px;
 font-weight: normal;
+}
+
+.two-columns__paragraf:first-child {
+  margin-top: 0;
+}
+
+.two-columns__paragraf:last-child {
+  margin-bottom: 0;
 }
 
 .two-columns__span-accent {
@@ -161,12 +171,8 @@ font-size: 18px;
 font-weight: normal;
 }
 
-.table__text_bank {
-margin: 0;
-text-align: left;
-line-height: 1.2;
-font-size: 18px;
-font-weight: normal;
+.table__text:last-child {
+  margin-bottom: 0;
 }
 
 .feynman {
@@ -179,7 +185,8 @@ position: relative;
 }
 
 .feynman__title {
-margin: 100px auto 70px;
+margin: 0 auto 70px;
+padding-top: 100px;
 width: 648px;
 text-align: center;
 line-height: 1.15;
@@ -190,6 +197,8 @@ font-weight: 600;
 .feynman__subtitle {
 display: block;
 text-align: center;
+margin-top: 0;
+margin-bottom: 0;
 line-height: 51px;
 font-size: 36px;
 font-weight: normal;
@@ -198,8 +207,7 @@ font-weight: normal;
 .link {
 position: absolute;
 top: 50%;
-right: 0;
-margin-right: 48px;
+right: 48px;
 color: #2f80ed;
 line-height: 51px;
 font-size: 36px;
@@ -212,68 +220,50 @@ overflow: hidden;
 position: relative;
 text-align: center;
 background-color: #1f1f1f;
-color: #fff;
-z-index: -2; 
 }
 
 .section-title_theme_dark {
 margin: 90px auto 0;
-width: 60%;
-line-height: 1.15;
-font-size: 60px;
-font-weight: 600;
+color: #fff;
 }
 
 .section-subtitle_theme_dark {
-margin: 20px auto 0;
-width: 60%;
-line-height: 34px;
-font-size: 24px;
-font-weight: normal;
+color: #fff;
 }
 
 .table_theme_dark{
-display: flex;
-justify-content: space-between;
-flex-wrap: wrap;
 margin: 0 auto 90px;
-padding: 0;
-width: 1100px;
 }
 
 .table__cell_theme_dark {
-list-style: none;
 width: 200px;
 margin-right: 0;
 margin-top: 80px;
+z-index: 2;
 }
 
 .table__heading_theme_dark {
-text-align: left;
-margin: 0 auto 20px;
-line-height: 1.15;
-font-size: 24px;
-font-weight: 600;
+color: #fff;
 }
 
 .table__text_theme_dark {
 margin: 0;
-text-align: left;
-line-height: 1.2;
-font-size: 17px;
-font-weight: normal;
+color: #fff;
 }
 
 .kaufman__triangle {
+background-image: url(../images/kaufman-triangle.svg);
 width: 877px;
 height: 877px;
 position: absolute;
 top: 0;
 right: -210px;
-z-index: -1;
+z-index: 1;
 }
 
 .footer {
+display: flex;
+box-sizing: border-box;
 min-height: 350px;
 background-color: #1f1f1f;
 color: #fff;
@@ -284,12 +274,16 @@ padding: 60px 0 40px;
 display: flex;
 flex-direction: row;
 justify-content: space-between;
+align-content: space-between;
 width: 90%;
 margin: 0 auto;
 padding: 0;
 }
 
 .footer__column_content_copyright {
+display: flex;
+flex-direction: column;
+justify-content: space-between;
 position: relative;
 flex-basis: 711px;
 }
@@ -300,9 +294,6 @@ height: 32px;
 }
 
 .footer__author {
-position: absolute;
-bottom: 0;
-margin: 18px 0;
 line-height: 25px;
 font-size: 18px;
 font-weight: normal;
