--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -13,6 +22,7 @@
   display: flex;
   align-items: center;
   position: relative;
+  overflow: hidden;
 }
 
 .logo_place_header {
@@ -70,6 +80,7 @@ color: #2f80ed;
   right: 0;
   width: 568px;
   height: 568px;
+  animation: rotation 20s ease infinite normal running;
 }
 
 .two-columns {
@@ -119,9 +130,61 @@ font-size: 24px;
 font-weight: 600;
 }
 
-.digits {
-text-align: center;
-color: #000;
+.techniques {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+  border: 1px solid red;
+}
+
+.cards {
+ width: 920px;
+ display: flex;
+ flex-wrap: wrap;
+ margin: 0 auto;
+ padding: 0;
+ border: 1px solid red;
+}
+
+.cards__item {
+ list-style: none;
+ width: 240px;
+ margin-right: 100px;
+ text-align: center;
+ border: 1px solid red;
+}
+
+.cards__item:nth-child(3n+3) {
+  margin-right: 0;
+}
+
+.cards__image {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  margin: 60px 40px 43px;
+  border: 1px solid red;
+}
+
+.cards__title {
+ margin: 0 auto 16px;
+ line-height: 1.15;
+ font-size: 24px;
+ font-weight: 600;
+ border: 1px solid red;
+}
+
+.cards__description {
+ margin: 0 auto;
+ text-align: center;
+ line-height: 23px;
+ font-size: 18px;
+ font-weight: normal;
+ border: 1px solid red;
+}
+
+.cards__description:last-child {
+  margin-bottom: 0;
 }
 
 .section-title {
@@ -140,39 +203,31 @@ font-size: 24px;
 font-weight: normal;
 }
 
-.table {
-display: flex;
-justify-content: space-between;
-flex-wrap: wrap;
-margin: 0 auto 100px;
-padding: 0;
-width: 1100px;
+.video {
+  text-align: center;
+  margin-bottom: 60px;
+  border: 1px solid red;
 }
 
-.table__cell {
-list-style: none;
-width: 250px;
-margin-top: 60px;
+.video__iframes {
+  margin: 50px auto -120px;
+  border: 1px solid red;
 }
 
-.table__heading {
-text-align: left;
-margin: 0 auto 20px;
-line-height: 1.15;
-font-size: 24px;
-font-weight: 600;
+.video__iframe {
+  width: 515px;
+  height: 316px;
+  margin-right: 20px;
+  border: 1px solid red;
 }
 
-.table__text {
-margin: 0 auto 20px;
-text-align: left;
-line-height: 1.2;
-font-size: 18px;
-font-weight: normal;
+.video__iframe:last-child {
+  margin-right: 0;
 }
 
-.table__text:last-child {
-  margin-bottom: 0;
+.oakley {
+  background-color: #f2f2f2;
+  border: 1px solid red;
 }
 
 .feynman {
@@ -185,7 +240,7 @@ position: relative;
 }
 
 .feynman__title {
-margin: 0 auto 70px;
+margin: -100px auto 70px;
 padding-top: 100px;
 width: 648px;
 text-align: center;
@@ -213,6 +268,127 @@ line-height: 51px;
 font-size: 36px;
 font-weight: normal;
 text-decoration: none;
+}
+
+.digits {
+  text-align: center;
+  color: #000;
+  }
+
+.table {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0 auto 100px;
+  padding: 0;
+  width: 1100px;
+  }
+  
+.table__cell {
+  list-style: none;
+  width: 250px;
+  margin-top: 60px;
+  }
+  
+.table__heading {
+  text-align: left;
+  margin: 0 auto 20px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  }
+  
+.table__text {
+  margin: 0 auto 20px;
+  text-align: left;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  }
+  
+.table__text:last-child {
+    margin-bottom: 0;
+  }
+
+.khan {
+  background-color: #f2f2f2;
+  border: 1px solid red;
+}
+
+.khan__container {
+  width: 80%;
+  text-align: left;
+  margin: auto;
+  border: 1px solid red;
+}
+
+.khan__author {
+  padding-top: 105px;
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+  border: 1px solid red;
+}
+
+.khan__title {
+ margin-top: 0;
+ margin-bottom: 50px;
+ line-height: 1.15;
+ font-size: 60px;
+ font-weight: 600;
+ border: 1px solid red;
+}
+
+.khan__quote {
+ width: 790px;
+ margin-top: 0;
+ margin-bottom: 36px;
+ line-height: 34px;
+ font-size: 24px;
+ font-weight: normal;
+ border: 1px solid red;
+}
+
+.khan__quote-author {
+  margin-top: 0;
+  margin-bottom: 10px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  border: 1px solid red;
+}
+
+.khan__quote-author-subline {
+  margin-top: 0;
+  margin-bottom: 68px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal;
+  border: 1px solid red;
+}
+
+.khan__book-container {
+  display: flex;
+  justify-content: flex-start;
+  border: 1px solid red;
+}
+
+.book-pic {
+  width: 608px;
+  height: 620px;
+  border: 1px solid red;
+}
+
+.khan__buy-link {
+  margin-left: 48px;
+  line-height: 42px;
+  color: #2f80ed;
+  font-size: 30px;
+  font-weight: normal;
+  text-decoration: none;
+  border: 1px solid red;
 }
 
 .kaufman {
@@ -259,6 +435,26 @@ position: absolute;
 top: 0;
 right: -210px;
 z-index: 1;
+animation: rotation 20s ease infinite normal running;
+border: 1px solid red;
+}
+
+.resources {
+  text-align: center;
+  border: 1px solid red;
+}
+
+.resources__logo-zone {
+  width: 1100px;
+  margin: 80px auto 217px;
+  border: 1px solid red;
+}
+
+.resources__logo {
+  width: 270px;
+  height: 38px;
+  text-decoration: none;
+  border: 1px solid red;
 }
 
 .footer {
