--- a/styles/style.css
+++ b/styles/style.css
@@ -63,6 +63,11 @@ text-decoration: none;
 color: #2f80ed;
 }
 
+.link_opacity:hover {
+  opacity: .6;
+  transition: opacity 0.5s ease-in;
+}
+
 .header__main-illustration {
   position: absolute;
   right: 0;
@@ -80,7 +85,11 @@ color: #2f80ed;
   right: 0;
   width: 568px;
   height: 568px;
-  animation: rotation 20s ease infinite normal running;
+  border: 1px solid red;
+}
+
+.rotation {
+  animation: rotation 20s linear infinite normal running;
 }
 
 .two-columns {
@@ -435,7 +444,6 @@ position: absolute;
 top: 0;
 right: -210px;
 z-index: 1;
-animation: rotation 20s ease infinite normal running;
 border: 1px solid red;
 }
 
