--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,7 @@ text-decoration: none;
 color: #2f80ed;
 }
 
-.link_opacity:hover {
+.opacity:hover {
   opacity: .6;
   transition: opacity 0.5s ease-in;
 }
@@ -85,7 +85,6 @@ color: #2f80ed;
   right: 0;
   width: 568px;
   height: 568px;
-  border: 1px solid red;
 }
 
 .rotation {
@@ -143,7 +142,6 @@ font-weight: 600;
   width: 80%;
   margin: 0 auto;
   text-align: center;
-  border: 1px solid red;
 }
 
 .cards {
@@ -152,7 +150,6 @@ font-weight: 600;
  flex-wrap: wrap;
  margin: 0 auto;
  padding: 0;
- border: 1px solid red;
 }
 
 .cards__item {
@@ -160,7 +157,6 @@ font-weight: 600;
  width: 240px;
  margin-right: 100px;
  text-align: center;
- border: 1px solid red;
 }
 
 .cards__item:nth-child(3n+3) {
@@ -172,7 +168,6 @@ font-weight: 600;
   height: 160px;
   border-radius: 50%;
   margin: 60px 40px 43px;
-  border: 1px solid red;
 }
 
 .cards__title {
@@ -180,7 +175,6 @@ font-weight: 600;
  line-height: 1.15;
  font-size: 24px;
  font-weight: 600;
- border: 1px solid red;
 }
 
 .cards__description {
@@ -189,7 +183,6 @@ font-weight: 600;
  line-height: 23px;
  font-size: 18px;
  font-weight: normal;
- border: 1px solid red;
 }
 
 .cards__description:last-child {
@@ -214,20 +207,16 @@ font-weight: normal;
 
 .video {
   text-align: center;
-  margin-bottom: 60px;
-  border: 1px solid red;
 }
 
 .video__iframes {
-  margin: 50px auto -120px;
-  border: 1px solid red;
+  margin: 50px auto -60px;
 }
 
 .video__iframe {
   width: 515px;
   height: 316px;
   margin-right: 20px;
-  border: 1px solid red;
 }
 
 .video__iframe:last-child {
@@ -236,7 +225,7 @@ font-weight: normal;
 
 .oakley {
   background-color: #f2f2f2;
-  border: 1px solid red;
+  padding-top: 60px;
 }
 
 .feynman {
@@ -321,14 +310,12 @@ text-decoration: none;
 
 .khan {
   background-color: #f2f2f2;
-  border: 1px solid red;
 }
 
 .khan__container {
   width: 80%;
   text-align: left;
   margin: auto;
-  border: 1px solid red;
 }
 
 .khan__author {
@@ -338,7 +325,6 @@ text-decoration: none;
   line-height: 42px;
   font-size: 30px;
   font-weight: normal;
-  border: 1px solid red;
 }
 
 .khan__title {
@@ -347,7 +333,6 @@ text-decoration: none;
  line-height: 1.15;
  font-size: 60px;
  font-weight: 600;
- border: 1px solid red;
 }
 
 .khan__quote {
@@ -357,7 +342,6 @@ text-decoration: none;
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
- border: 1px solid red;
 }
 
 .khan__quote-author {
@@ -366,7 +350,6 @@ text-decoration: none;
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
-  border: 1px solid red;
 }
 
 .khan__quote-author-subline {
@@ -375,19 +358,18 @@ text-decoration: none;
   line-height: 1.15;
   font-size: 24px;
   font-weight: normal;
-  border: 1px solid red;
 }
 
 .khan__book-container {
   display: flex;
   justify-content: flex-start;
-  border: 1px solid red;
 }
 
 .book-pic {
+  background-image: url(../images/khan-book.jpg);
   width: 608px;
   height: 620px;
-  border: 1px solid red;
+  z-index: 1;
 }
 
 .khan__buy-link {
@@ -397,7 +379,6 @@ text-decoration: none;
   font-size: 30px;
   font-weight: normal;
   text-decoration: none;
-  border: 1px solid red;
 }
 
 .kaufman {
@@ -410,10 +391,14 @@ background-color: #1f1f1f;
 .section-title_theme_dark {
 margin: 90px auto 0;
 color: #fff;
+position: relative;
+z-index: 2;
 }
 
 .section-subtitle_theme_dark {
 color: #fff;
+position: relative;
+z-index: 2;
 }
 
 .table_theme_dark{
@@ -440,29 +425,28 @@ color: #fff;
 background-image: url(../images/kaufman-triangle.svg);
 width: 877px;
 height: 877px;
+background-size: 100%;
 position: absolute;
 top: 0;
 right: -210px;
 z-index: 1;
-border: 1px solid red;
 }
 
 .resources {
   text-align: center;
-  border: 1px solid red;
 }
 
 .resources__logo-zone {
   width: 1100px;
+  display: flex;
+  justify-content: space-between;
   margin: 80px auto 217px;
-  border: 1px solid red;
 }
 
 .resources__logo {
   width: 270px;
   height: 38px;
   text-decoration: none;
-  border: 1px solid red;
 }
 
 .footer {
