--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,6 +1,6 @@
 .khan__book-pic {
-    background-image: url(../../../images/khan-book.jpg);
-    width: 608px;
-    height: 620px;
-    z-index: 1;
+    width: 620px;
+    height: 608px;
+    object-position: 0 0;
+    object-fit: cover;
   }
