--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -1,4 +1,4 @@
-.two-columns__paragraf {
+.two-columns__paragraph {
     margin: 30px 0 0 0;
     color: #000;
     line-height: 34px;
@@ -6,10 +6,10 @@
     font-weight: normal;
     }
     
-    .two-columns__paragraf:first-child {
+    .two-columns__paragraph:first-child {
       margin-top: 0;
     }
     
-    .two-columns__paragraf:last-child {
+    .two-columns__paragraph:last-child {
       margin-bottom: 0;
     }
