--- a/blocks/logo/_place/logo_place_header.css
+++ b/blocks/logo/_place/logo_place_header.css
@@ -1,8 +1,8 @@
-.logo_place_header {
-    position: absolute;
-    left: 64px;
-    top: 30px;
-    width: 228px;
-    height: 32px;
-    z-index: 2;
-  }
+.logo-place__header {
+  position: absolute;
+  left: 64px;
+  top: 30px;
+  width: 228px;
+  height: 32px;
+  z-index: 2;
+}
