--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -1,7 +1,7 @@
-.section-title {
-    margin: 100px auto 0;
-    width: 60%;
-    line-height: 1.15;
-    font-size: 60px;
-    font-weight: 600;
-    }
+.section__title {
+  margin: 100px auto 0;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
